# ai-semantic-kernel-framework-project

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.backup-20260518.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  .flake8  CLAUDE.md  Dockerfile  README.md  alembic.ini  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt
backend/.venv-rc4/: pyvenv.cfg
backend/.venv-rc4/Scripts/: activate  activate.bat  jp.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260108_1655_004_fix_fullname_nullable.py  20260116_1700_005_sync_agent_checkpoint_models.py  20260414_1000_007_create_agent_experts_table.py  20260420_1500_009_create_session_memory.py
backend/config/: capability_matrix.yaml  error_budgets.yaml  guardrails.yaml  llm_pricing.yml  notification.yaml  retry_policies.yaml  risk_policy.yaml  tenant_plans.yml
backend/migrations/: env.py
backend/migrations/versions/: s3_1_rbac_tables.py
backend/prompts/: common.yaml
backend/qdrant_data/: meta.json
backend/scripts/: backfill_session_memory_pg.py  benchmark_combined_formation_quality.py  benchmark_correction_hygiene.py  benchmark_judge.py  benchmark_key_condition.py  benchmark_mem0_async.py  benchmark_memory_grounded_judge.py  benchmark_memory_recall_precision.py  benchmark_memory_search.py  benchmark_otel_conformance.py  benchmark_sandbox_escape.py  benchmark_tool_anchored_masking.py  benchmark_tool_error_reflection.py  register_test_user.py  verify_audit_chain.py  verify_official_api_usage.py
backend/src/: __init__.py  main.py
backend/src/adapters/: __init__.py
backend/src/agent_harness/: __init__.py
backend/src/api/: CLAUDE.md  __init__.py  main.py
backend/src/business_domain/: README.md  __init__.py  _base.py  _obs.py  _register_all.py  _service_factory.py
backend/src/core/: __init__.py  config.py  feature_flags.py  sandbox_config.py
backend/src/domain/: CLAUDE.md
backend/src/infrastructure/: CLAUDE.md  __init__.py  redis_client.py
backend/src/integrations/: CLAUDE.md
backend/src/middleware/: __init__.py  auth.py  rate_limit.py  tenant.py
backend/src/mock_services/: __init__.py  main.py
backend/src/platform_layer/: __init__.py
backend/src/runtime/: __init__.py
backend/templates/: escalation_agent.yaml  it_triage_agent.yaml  knowledge_agent.yaml  monitoring_agent.yaml
backend/templates/scenarios/: automated_reporting.yaml  autonomous_planning.yaml
backend/tests/: __init__.py  conftest.py
backend/tests/benchmark/: test_judge_accuracy.py
backend/tests/e2e/: conftest.py  test_adf_e2e_verification.py  test_agent_loop_with_mock_patrol.py  test_ai_autonomous_decision.py  test_handoff_workflow.py  test_human_approval.py  test_incident_e2e_verification.py  test_lead_then_verify_workflow.py  test_long_conversation_50turn.py  test_main_flow_via_prompt_builder.py  test_n8n_e2e_verification.py
backend/tests/integration/: test_business_intent_router.py  test_e2e_smoke.py  test_execution_service_migration.py  test_phase3_integration.py  test_workflows_crud.py
backend/tests/load/: locustfile.py
backend/tests/mocks/: __init__.py  agent_framework_mocks.py  llm.py  orchestration.py
backend/tests/performance/: test_e2e_phase2.py  test_llm_performance.py  test_memory_usage.py  test_routing_performance.py  test_sprint127_benchmarks.py  test_workflow_executor_performance.py
backend/tests/security/: conftest.py  test_authentication.py  test_red_team_isolation.py
backend/tests/unit/: test_agent_api.py  test_agent_framework_base.py  test_agent_framework_mocks.py  test_agent_service.py  test_approval_gateway.py  test_business_metrics.py  test_capability_matcher.py  test_chaos_dummy_53_7.py  test_checkpoint_service.py  test_collaboration_protocol.py  (+49 more)
(+6282 files in other folders)
